--- a/wheel.css
+++ b/wheel.css
@@ -8,7 +8,7 @@
   margin: 50px;
 }
 .wheel .wheel__inner {
-  /* background-color: red; */
+  background-color: red;
   position: relative;
   width: 200px;
   height: 350px;
