--- a/wheel.css
+++ b/wheel.css
@@ -5,29 +5,45 @@
 .bc_image{
 	text-align: center;
 	position: relative;
-	z-index: 2;
+	z-index: 1;
+}
+
+.wheel_frame{
+	text-align: center;
+	position: absolute;
+  left: 32%;
+  top: 10%;
+	z-index: 3;
+}
+
+.wheel_button{
+	text-align: center;
+	position: absolute;
+  left: 46%;
+  top: 10%;
+	z-index: 3;
 }
 
 .wheel {
-	position: relative;
+	position: absolute;
 	text-align: center;
   perspective: 1000px;
   /* border: 1px solid #333; */
   margin: 0 auto;
-	width: 10%;
-	top: -66%;
+  left: 43.5%;
+  top: 27.5%;
 	height: 0%;
-	z-index: 1;
+	z-index: 2;
 }
 .wheel .wheel__inner {
-  width: 200px;
-  height: 350px;
+  width: 250px;
+  height: 450px;
   margin: 0 auto ;
   transform-style: preserve-3d;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-name: spin;
-  animation-duration: 6s;
+  animation-duration: 7s;
 }
 .wheel .wheel__inner .wheel__segment {
   display: flex;
@@ -37,12 +53,12 @@
   height: 40px;
   position: absolute;
   top: 50%;
-  background-color: #5a8d22;
-      color: #ffffff;
+  background-color: #903536;
+      /* color: #ffffff; */
 }
-.wheel .wheel__inner .wheel__segment:nth-child(even) {
+/* .wheel .wheel__inner .wheel__segment:nth-child(even) {
   background-color: #972c2c;
-}
+} */
 
 @-webkit-keyframes spin {
   0% {
