--- a/wheel.css
+++ b/wheel.css
@@ -16,12 +16,17 @@
 	z-index: 3;
 }
 
-.wheel_button{
-	text-align: center;
-	position: absolute;
-  left: 46%;
-  top: 10%;
-	z-index: 3;
+div.wheel_button input {
+    background:url(src/knopkaKrutit1.png) no-repeat;
+    cursor:pointer;
+    width: 180px;
+    height: 70px;
+    border: none;
+    text-align: center;
+    position: absolute;
+    left: 45.4%;
+    top: 74%;
+    z-index: 3;
 }
 
 .wheel {
@@ -35,15 +40,15 @@
 	height: 0%;
 	z-index: 2;
 }
-.wheel .wheel__inner {
+.wheel__inner {
   width: 250px;
   height: 450px;
   margin: 0 auto ;
   transform-style: preserve-3d;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-name: spin;
-  animation-duration: 7s;
+  /* animation-iteration-count: infinite; */
+  /* animation-timing-function: linear; */
+  /* animation-name: spin; */
+  /* animation-duration: 4s; */
 }
 .wheel .wheel__inner .wheel__segment {
   display: flex;
@@ -53,21 +58,26 @@
   height: 40px;
   position: absolute;
   top: 50%;
-  background-color: #903536;
+  background-image: url(src/assets/wheel_img/debuff1.png);
+  /* background-color: #903536; */
       /* color: #ffffff; */
 }
 /* .wheel .wheel__inner .wheel__segment:nth-child(even) {
   background-color: #972c2c;
 } */
 
-@-webkit-keyframes spin {
+.wheelAnimation {
+  animation: 3s ease-in 1 reverse spinWheel;
+}
+
+@-webkit-keyframes spinWheel {
   0% {
-    transform: rotateX(360deg);
-  }
-  50% {
-    transform: rotateX(180deg);
-  }
-  100% {
     transform: rotateX(0deg);
+  }
+   /* 50% {
+    transform: rotateX(180deg);
+  } */
+  100% {
+    transform: rotateX(360deg);
   }
 }
