--- a/wheel.css
+++ b/wheel.css
@@ -9,10 +9,21 @@
 }
 
 .wheel_frame{
+  pointer-events: none;
 	text-align: center;
 	position: absolute;
   left: 32%;
   top: 10%;
+	z-index: 3;
+}
+
+.description{
+  pointer-events: none;
+	text-align: center;
+	position: absolute;
+  left: 65%;
+  top: 30%;
+  width: 20%;
 	z-index: 3;
 }
 
