--- a/wheel.css
+++ b/wheel.css
@@ -18,19 +18,22 @@
 }
 
 .description{
+  font-family: NewRocker;
   pointer-events: none;
 	text-align: center;
-  font-size: 20;
+  font-size: 24;
   color: white;
 	position: absolute;
-  left: 65%;
+  left: 35%;
   top: 35%;
   width: 20%;
-	z-index: 3;
+  width: 30%;
+	z-index: 999;
+  text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
 }
 
 #descriptionName{
-  font-size: 28;
+  font-size: 32;
   font-weight: bold;
 }
 
@@ -94,3 +97,8 @@ div.wheel_button input {
   /* from {transform: rotateX(0deg);} */
   to {transform: rotateX(3600deg);}
 }
+
+@font-face {
+    font-family: NewRocker; /* Имя шрифта */
+    src: url(src/fonts/Ubuntu-R.ttf); /* Путь к файлу со шрифтом */
+   }
