--- a/wheel.css
+++ b/wheel.css
@@ -2,19 +2,31 @@
   box-sizing: border-box;
 }
 
+.wheel_block{
+  margin-right: 0;
+}
+
 .bc_image{
 	text-align: center;
 	position: relative;
 	z-index: 1;
 }
 
+.yakubgachi{
+  left: 10%;
+  top: 20%;
+  position: absolute;
+	z-index: 4;
+}
+
 .wheel_frame{
   pointer-events: none;
 	text-align: center;
 	position: absolute;
+  /* width: 680px; */
   left: 32%;
   top: 10%;
-	z-index: 3;
+  z-index: 3;
 }
 
 .description{
@@ -24,10 +36,9 @@
   font-size: 24;
   color: white;
 	position: absolute;
-  left: 35%;
+  left: 65%;
   top: 35%;
-  width: 20%;
-  width: 30%;
+  width: 25%;
 	z-index: 999;
   text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
 }
@@ -56,9 +67,9 @@ div.wheel_button input {
   perspective: 1000px;
   /* border: 1px solid #333; */
   margin: 0 auto;
-  left: 43.5%;
-  top: 23.5%;
-	height: 0%;
+  left: 43.7%;
+  top: 28%;
+	/* height: 0%; */
 	z-index: 2;
 }
 .wheel__inner {
