--- a/styles/effectsWheel.css
+++ b/styles/effectsWheel.css
@@ -14,9 +14,11 @@
 
 .wheel_frame{
   pointer-events: none;
-	text-align: center;
-	position: absolute;
-  left: 32%;
+	/* text-align: center; */
+	position: fixed;
+  /* height: 60%; */
+  /* width: 35%; */
+  left: 32.15%;
   top: 10%;
   z-index: 3;
 }
@@ -47,23 +49,23 @@ div.wheel_button input {
     height: 70px;
     border: none;
     text-align: center;
-    position: absolute;
-    left: 45.4%;
+    position: fixed;
+    left: 45.3%;
     top: 74.8%;
     z-index: 3;
 }
 
 .wheel {
-	position: absolute;
-	text-align: center;
+  display: block;
+	position: fixed;
+  width: 13%;
   perspective: 1000px;
-  margin: 0 auto;
   left: 43.7%;
-  top: 28%;
+  top: 27%;
 	z-index: 2;
 }
 .wheel__inner {
-  width: 250px;
+  /* width: 250px; */
   height: 450px;
   margin: 0 auto ;
   transform-style: preserve-3d;
