--- a/styles/typeWheel.css
+++ b/styles/typeWheel.css
@@ -14,9 +14,11 @@
 
 .wheel_frame{
   pointer-events: none;
-	text-align: center;
-	position: absolute;
-  left: 32.4%;
+  /* text-align: center; */
+  position: fixed;
+  /* height: 60%; */
+  width: 10%;
+  left: 32.5%;
   top: 10%;
   z-index: 3;
 }
@@ -47,24 +49,24 @@ div.wheel_button input {
     height: 70px;
     border: none;
     text-align: center;
-    position: absolute;
-    left: 45.4%;
+    position: fixed;
+    left: 45.3%;
     top: 74.8%;
     z-index: 3;
 }
 
 .wheel {
-	position: absolute;
-	text-align: center;
+  display: block;
+	position: fixed;
+  width: 13%;
   perspective: 1000px;
-  margin: 0 auto;
-  left: 43.7%;
-  top: 36%;
+  left: 43.5%;
+  top: 37%;
 	z-index: 2;
 }
 .wheel__inner {
-  width: 250px;
-  height: 450px;
+  /* width: 250px; */
+  height: 400px;
   margin: 0 auto ;
   transform-style: preserve-3d;
 }
@@ -76,8 +78,7 @@ div.wheel_button input {
   height: 40px;
   position: absolute;
   top: 50%;
-  background-image: url(../src/assets/wheel_img/white_bg.png);
-  /* background-size: 95%; */
+  /* background-image: url(../src/assets/wheel_img/debuff1.png); */
 }
 
 .wheelAnimation {
