--- a/styles/effectsWheel.css
+++ b/styles/effectsWheel.css
@@ -30,10 +30,11 @@
   font-size: 24;
   color: white;
 	position: absolute;
-  left: 65%;
-  top: 35%;
-  width: 25%;
-	z-index: 999;
+  left: 66%;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 24%;
+	/* z-index: 999; */
   text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
 }
 
