--- a/styles/typeWheel.css
+++ b/styles/typeWheel.css
@@ -30,9 +30,10 @@
   font-size: 24;
   color: white;
 	position: absolute;
-  left: 65%;
-  top: 25%;
-  width: 25%;
+  left: 66%;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 24%;
 	z-index: 999;
   text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
 }
