--- a/styles/effectsWheel.css
+++ b/styles/effectsWheel.css
@@ -62,7 +62,8 @@ div.wheel_button input {
   width: 13%;
   perspective: 1000px;
   left: 43.7%;
-  top: 27%;
+  top: 50%;
+  transform: translateY(-59.5%);
 	z-index: 2;
 }
 .wheel__inner {
