--- a/styles/horrorWheel.css
+++ b/styles/horrorWheel.css
@@ -30,12 +30,12 @@
   font-family: MontserratMedium;
   pointer-events: none;
 	text-align: center;
-  font-size: 36;
+  font-size: 48;
   color: white;
 	position: absolute;
   width: 30%;
 	z-index: 10;
-  top: 46%;
+  top: 420px;
   transform: translateY(-50%);
   left: 50%;
   transform: translateX(-50%);
@@ -49,10 +49,10 @@
   font-size: 24;
   color: white;
 	position: absolute;
-  left: 66%;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 24%;
+  top: 420px;
+  /* transform: translateY(-50%); */
+  left: 50%;
+  transform: translateX(-50%);
 	/* z-index: 999; */
   text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
 }
@@ -70,7 +70,8 @@ div.wheel_button input {
     border: none;
     text-align: center;
     position: fixed;
-    left: 45.3%;
+    left: 50%;
+    transform: translateX(-50%);
     top: 74.8%;
     z-index: 3;
 }
@@ -78,16 +79,16 @@ div.wheel_button input {
 .wheel {
   display: block;
 	position: fixed;
-  width: 13%;
+  /* width: 600px; */
   perspective: 1000px;
-  left: 43.7%;
-  top: 50%;
-  transform: translateY(-59.5%);
+  left: 50%;
+  top: 65%;
+  transform: translateY(-50%);
 	z-index: 2;
 }
 .wheel__inner {
-  /* width: 250px; */
-  height: 450px;
+  /* width: 50px; */
+  height: 600px;
   margin: 0 auto ;
   transform-style: preserve-3d;
 }
@@ -95,7 +96,7 @@ div.wheel_button input {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  /* width: 100%; */
   height: 40px;
   position: absolute;
   top: 50%;
@@ -119,7 +120,7 @@ div.wheel_button input {
 }
 
 @-webkit-keyframes spinWheel {
-  to {transform: rotateX(3600deg);}
+  to {transform: rotateY(3600deg);}
 }
 
 @font-face {
