--- a/styles/horrorWheel.css
+++ b/styles/horrorWheel.css
@@ -18,16 +18,10 @@ body{
 
 .wheel_frame{
   pointer-events: none;
-	/* text-align: center; */
 	position: absolute;
-  /* height: 60%; */
-  /* width: 35%; */
   left: 50%;
   transform: translateX(-50%);
-  top: 556px;
-  /* top: 10%;  */
-  /* top: 50%;
-  transform: translateY(-50%); */
+  top: 605px;
   z-index: 3;
 }
 
@@ -56,14 +50,13 @@ body{
   color: white;
 	position: absolute;
   top: 420px;
-  /* transform: translateY(-50%); */
   left: 50%;
   transform: translateX(-50%);
-	/* z-index: 999; */
   text-shadow:0px 1px 0 rgb(0,0,0),0px -1px 0 rgb(0,0,0),1px 0px 0 rgb(0,0,0),-1px 0px 0 rgb(0,0,0),1px 1px 0 rgb(0,0,0),1px -1px 0 rgb(0,0,0),-1px 1px 0 rgb(0,0,0),-1px -1px 0 rgb(0,0,0);
 }
 
 #descriptionName{
+  font-family: Montserrat;
   font-size: 32;
   font-weight: bold;
 }
@@ -78,7 +71,7 @@ div.wheel_button input {
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
-    top: 74.8%;
+    top: 80%;
     z-index: 3;
 }
 
@@ -88,7 +81,7 @@ div.wheel_button input {
   /* width: 600px; */
   perspective: 1000px;
   left: 50%;
-  top: 65%;
+  top: 70%;
   transform: translateY(-50%);
 	z-index: 2;
 }
