--- a/styles/horrorWheel.css
+++ b/styles/horrorWheel.css
@@ -124,7 +124,7 @@ div.wheel_button input {
 
 @font-face {
     font-family: Montserrat;
-    src: url(../src/fonts/Sehnsucht.ttf);
+    src: url(../src/fonts/Viza.ttf);
 }
 
 @font-face {
