legendary css pisition added

--- a/styles/effectsWheel.css
+++ b/styles/effectsWheel.css
@@ -108,14 +108,18 @@ div.wheel_button input {
 
 .spin:after {
   content:"";
-  animation: spin 0.4s linear 5;
+  animation: spin 0.5s linear 5;
 }
 @keyframes spin {
   0% { content:"(бафф сгорает)"; }
-  20% { content:"кинодень на следующем стриме"; }
-  40% { content:"чил Дэй с кс/дотой/настолкой/гвинтом и т.д. на следующем стриме"; }
-  60% { content:"коллаб с другим стримером на одном из следующих стримов"; }
-  80% { content:"донатный Аук на следующем стриме"; }
+  11% { content:"кинодень на следующем стриме"; }
+  22% { content:"чил Дэй с кс/дотой/настолкой/гвинтом и т.д. на следующем стриме"; }
+  33% { content:"коллаб с другим стримером на одном из следующих стримов"; }
+  44% { content:"донатный Аук на следующем стриме"; }
+  55% { content:"выбор со зрителями онлайн игры из топа твича и стрим по ней"; }
+  66% { content:"cтрим видосов от зрителей"; }
+  77% { content:"зацепный стрим по игре с сабдея, которую выберут зрители"; }
+  88% { content:"шоблинговый/флореновый аук на следующем стриме"; }
 }
 
 @-webkit-keyframes spinWheel {
